WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251176
Fix negative shadow repaint issue
https://bugs.webkit.org/show_bug.cgi?id=251176
Summary
Fix negative shadow repaint issue
Ahmad Saleem
Reported
2023-01-25 15:08:25 PST
Hi Team, While going through Blink's commit, which seems to a good fix since intermittently we have same painting issue, at least what I have experienced with this testcase: Test Case -
https://jsfiddle.net/dLxq1pm7/
^ Safari 16.2, STP162 some time does not show full "red" and have gap in it till some time passes or you resize. Blink Commit -
https://src.chromium.org/viewvc/blink?view=revision&revision=164709
I just wanted to raise so we can fix this. Thanks!
Attachments
Patch
(8.69 KB, patch)
2023-05-09 17:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.69 KB, patch)
2023-05-09 19:41 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-01-25 15:23:36 PST
Seems reasonable to merge.
Ahmad Saleem
Comment 2
2023-01-25 15:25:25 PST
(In reply to Simon Fraser (smfr) from
comment #1
)
> Seems reasonable to merge.
Yep, was doing PR in the background but right now in Draft -
https://github.com/WebKit/WebKit/pull/9157
EWS
Comment 3
2023-01-27 09:45:56 PST
Committed
259497@main
(b10e15662611): <
https://commits.webkit.org/259497@main
> Reviewed commits have been landed. Closing PR #9157 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-01-27 09:46:20 PST
<
rdar://problem/104749948
>
WebKit Commit Bot
Comment 5
2023-05-08 11:47:02 PDT
Re-opened since this is blocked by
bug 256480
Ahmad Saleem
Comment 6
2023-05-08 15:53:49 PDT
Just for future, RenderObject.cpp change was moved to "RenderBox.cpp" in Blink and later this was overwritten by this:
https://src.chromium.org/viewvc/blink?view=revision&revision=177971
alan
Comment 7
2023-05-09 17:57:16 PDT
Created
attachment 466301
[details]
Patch
alan
Comment 8
2023-05-09 19:41:57 PDT
Created
attachment 466302
[details]
Patch
EWS
Comment 9
2023-05-10 08:00:01 PDT
Committed
263899@main
(b8d4023a9816): <
https://commits.webkit.org/263899@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466302
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug