Fix negative shadow repaint issue https://bugs.webkit.org/show_bug.cgi?id=251176 <rdar://problem/104749948>

Reviewed by Simon Fraser.

Negative offset value places the box shadow above the bottom edge of the box (and to the left of the right edge).
It turns regular, outset type of shadow into an inset type of damage
since repaint has to happen above the bottom edge (away from the right side).

(test case credits go to https://src.chromium.org/viewvc/blink?view=revision&revision=164709)

* LayoutTests/fast/box-shadow/negative-shadow-box-expand-expected.txt: Added.
* LayoutTests/fast/box-shadow/negative-shadow-box-expand.html: Added.
* LayoutTests/fast/box-shadow/negative-shadow-box-shrink-expected.txt: Added.
* LayoutTests/fast/box-shadow/negative-shadow-box-shrink.html: Added.
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::repaintAfterLayoutIfNeeded):

Canonical link: https://commits.webkit.org/263899@main